--- a/generators/client/templates/webapp/app/app.component.ts.ejs
+++ b/generators/client/templates/webapp/app/app.component.ts.ejs
@@ -1,3 +1,23 @@
+<%#
+ Copyright 2013-2022 the original author or authors from the JHipster project.
+
+ This file is part of the JHipster project, see https://www.jhipster.tech/
+ for more information.
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+      https://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+
+ N.B. JHipster 7.8.1 angular main template modified and merged
+-%>
 /**
  * @license
  * Copyright Akveo. All Rights Reserved.
@@ -6,13 +26,18 @@
 import { AnalyticsService } from './@core/utils/analytics.service';
 import { SeoService } from './@core/utils/seo.service';
 
-// aggiunta
-import { Component, OnInit, RendererFactory2, Renderer2 } from '@angular/core';
+import { Component, OnInit<% if (enableTranslation) { %>, RendererFactory2, Renderer2<% } %> } from '@angular/core';
 import { Title } from '@angular/platform-browser';
 import { Router, ActivatedRouteSnapshot, NavigationEnd } from '@angular/router';
+<%_ if (enableTranslation) { _%>
 import { TranslateService, LangChangeEvent } from '@ngx-translate/core';
 import dayjs from 'dayjs/esm';
+<%_ } _%>
+
 import { AccountService } from 'app/core/auth/account.service';
+<%_ if (enableI18nRTL) { _%>
+import { FindLanguageFromKeyPipe } from 'app/shared/language/find-language-from-key.pipe';
+<%_ } _%>
 
 @Component({
   selector: 'ngx-app',
@@ -20,22 +45,31 @@ import { AccountService } from 'app/core/auth/account.service';
 })
 export class AppComponent implements OnInit {
 
-  private renderer: Renderer2;
+  <%_ if (enableTranslation) { _%>
+    private renderer: Renderer2;
+  <%_ } _%>
 
   constructor(private analytics: AnalyticsService, private seoService: SeoService,
     private accountService: AccountService,
     private titleService: Title,
     private router: Router,
-    private translateService: TranslateService,
-    rootRenderer: RendererFactory2) {
+    <%_ if (enableI18nRTL) { _%>
+      private findLanguageFromKeyPipe: FindLanguageFromKeyPipe,
+  <%_ } _%>
+  <%_ if (enableTranslation) { _%>
+      private translateService: TranslateService,
+      rootRenderer: RendererFactory2
+  <%_ } _%>
+    ) {
+  <%_ if (enableTranslation) { _%>
       this.renderer = rootRenderer.createRenderer(document.querySelector('html'), null);
-  }
+  <%_ } _%>
+    }
 
   ngOnInit(): void {
     this.analytics.trackPageViews();
     this.seoService.trackCanonicalChanges();
 
-    // aggiunta
     // try to log in automatically
     this.accountService.identity().subscribe();
 
@@ -45,11 +79,17 @@ export class AppComponent implements OnInit {
       }
     });
 
+<%_ if (enableTranslation) { _%>
     this.translateService.onLangChange.subscribe((langChangeEvent: LangChangeEvent) => {
       this.updateTitle();
       dayjs.locale(langChangeEvent.lang);
       this.renderer.setAttribute(document.querySelector('html'), 'lang', langChangeEvent.lang);
+
+  <%_ if (enableI18nRTL) { _%>
+      this.updatePageDirection();
+  <%_ } _%>
     });
+<%_ } _%>
   }
 
   private getPageTitle(routeSnapshot: ActivatedRouteSnapshot): string {
@@ -63,8 +103,18 @@ export class AppComponent implements OnInit {
   private updateTitle(): void {
     let pageTitle = this.getPageTitle(this.router.routerState.snapshot.root);
     if (!pageTitle) {
-      pageTitle = 'global.title';
+      pageTitle = '<% if (enableTranslation) { %>global.title<% } else { %><%= humanizedBaseName %><% } %>';
     }
+<%_ if (enableTranslation) { _%>
     this.translateService.get(pageTitle).subscribe(title => this.titleService.setTitle(title));
+<%_ } else { _%>
+    this.titleService.setTitle(pageTitle);
+<%_ } _%>
   }
+
+<%_ if (enableI18nRTL) { _%>
+  private updatePageDirection(): void {
+    this.renderer.setAttribute(document.querySelector('html'), 'dir', this.findLanguageFromKeyPipe.isRTL(this.translateService.currentLang) ? 'rtl' : 'ltr');
+  }
+<%_ } _%>
 }
