--- a/generators/client/templates/webapp/app/app.module.ts.ejs
+++ b/generators/client/templates/webapp/app/app.module.ts.ejs
@@ -1,12 +1,29 @@
+<%#
+ Copyright 2013-2022 the original author or authors from the JHipster project.
+
+ This file is part of the JHipster project, see https://www.jhipster.tech/
+ for more information.
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+      https://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+
+ N.B. JHipster 7.8.1 angular template modified
+-%>
 /**
  * @license
  * Copyright Akveo. All Rights Reserved.
  * Licensed under the MIT License. See License.txt in the project root for license information.
  */
-import { BrowserModule } from '@angular/platform-browser';
 import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
-import { NgModule } from '@angular/core';
-import { HttpClientModule } from '@angular/common/http';
 import { CoreModule } from './@core/core.module';
 import { ThemeModule } from './@theme/theme.module';
 import { AppComponent } from './app.component';
@@ -22,36 +39,52 @@ import {
 } from '@nebular/theme';
 
 
-// aggiunta
-import { LOCALE_ID } from '@angular/core';
+<%_
+  const localeId = getLocaleId(nativeLanguage);
+_%>
+import { NgModule, LOCALE_ID } from '@angular/core';
 import { registerLocaleData } from '@angular/common';
-import locale from '@angular/common/locales/it';
-import { Title } from '@angular/platform-browser';
+import { HttpClientModule } from '@angular/common/http';
+import locale from '@angular/common/locales/<%= localeId %>';
+import { BrowserModule, Title } from '@angular/platform-browser';
+import { ServiceWorkerModule } from '@angular/service-worker';
 import { FaIconLibrary } from '@fortawesome/angular-fontawesome';
+<%_ if (authenticationTypeSession && communicationSpringWebsocket) { _%>
+import { CookieService } from 'ngx-cookie-service';
+<%_ } _%>
 import { NgxWebstorageModule } from 'ngx-webstorage';
 import dayjs from 'dayjs/esm';
 import { NgbDateAdapter, NgbDatepickerConfig } from '@ng-bootstrap/ng-bootstrap';
+
 import { ApplicationConfigService } from 'app/core/config/application-config.service';
 import './config/dayjs';
 import { SharedModule } from 'app/shared/shared.module';
+<%_ if (enableTranslation) { _%>
 import { TranslationModule } from 'app/shared/language/translation.module';
+<%_ } _%>
+import { AppRoutingModule } from './app-routing.module';
+import { HomeModule } from './home/home.module';
 // jhipster-needle-angular-add-module-import JHipster will add new module here
 import { NgbDateDayjsAdapter } from './config/datepicker-adapter';
 import { fontAwesomeIcons } from './config/font-awesome-icons';
 import { httpInterceptorProviders } from 'app/core/interceptor/index';
-//import { NavbarComponent } from './layouts/navbar/navbar.component';
-//import { PageRibbonComponent } from './layouts/profiles/page-ribbon.component';
+<%_ if (enableI18nRTL) { _%>
+import { FindLanguageFromKeyPipe } from 'app/shared/language/find-language-from-key.pipe';
+<%_ } _%>
+<%_ if (enableTranslation) { _%>
 import { ActiveMenuDirective } from './layouts/navbar/active-menu.directive';
+<%_ } _%>
 import { ErrorComponent } from './layouts/error/error.component';
 
 @NgModule({
-  declarations: [AppComponent, ErrorComponent, ActiveMenuDirective],
   imports: [
     // aggiunta
     SharedModule,
     // jhipster-needle-angular-add-module JHipster will add new module here
     NgxWebstorageModule.forRoot({ prefix: 'jhi', separator: '-', caseSensitive: true }),
-    TranslationModule,
+    <%_ if (enableTranslation) { _%>
+      TranslationModule,
+    <%_ } _%>
     BrowserModule,
     BrowserAnimationsModule,
     HttpClientModule,
@@ -69,13 +102,25 @@ import { ErrorComponent } from './layouts/error/error.component';
     ThemeModule.forRoot(),
   ],
   bootstrap: [AppComponent],
-  // aggiunta
   providers: [
     Title,
-    { provide: LOCALE_ID, useValue: 'it' },
+<%_ if (authenticationTypeSession && communicationSpringWebsocket) { _%>
+    CookieService,
+<%_ } _%>
+    { provide: LOCALE_ID, useValue: '<%= skipLanguageForLocale(nativeLanguage) ? 'en' : localeId %>' },
     { provide: NgbDateAdapter, useClass: NgbDateDayjsAdapter },
+<%_ if (enableI18nRTL) { _%>
+    FindLanguageFromKeyPipe,
+<%_ } _%>
     httpInterceptorProviders,
   ],
+  declarations: [
+  AppComponent,
+  ErrorComponent,
+<%_ if (enableTranslation) { _%>
+  ActiveMenuDirective,
+<%_ } _%>
+],
 })
 export class AppModule {
   constructor(applicationConfigService: ApplicationConfigService, iconLibrary: FaIconLibrary, dpConfig: NgbDatepickerConfig) {
