--- a/generators/client/templates/webapp/app/ngx-header/header.component.ts.ejs
+++ b/generators/client/templates/webapp/app/ngx-header/header.component.ts.ejs
@@ -1,4 +1,21 @@
-import { Component, OnDestroy, OnInit } from '@angular/core';
+<%#
+Copyright 2013-2022 the original author or authors from the JHipster project.
+This file is part of the JHipster project, see https://www.jhipster.tech/
+for more information.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+     https://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+
+N.B. JHipster 7.8.1 angular navbar template modified and merged
+
+-%>
+import { OnDestroy } from '@angular/core';
 import { NbMediaBreakpointsService, NbMenuService, NbSidebarService, NbThemeService } from '@nebular/theme';
 
 
@@ -6,20 +23,24 @@ import { LayoutService } from '../../../@core/utils';
 import { map, takeUntil } from 'rxjs/operators';
 import { Subject } from 'rxjs';
 
-// aggiunta
 import { FormControl } from '@angular/forms';
 
+import { Component, OnInit<% if (enableTranslation && applicationTypeGateway) { %>, Compiler, Injector, NgModuleFactory, Type<% } %> } from '@angular/core';
 import { Router } from '@angular/router';
+<%_ if (enableTranslation) { _%>
 import { TranslateService } from '@ngx-translate/core';
 import { SessionStorageService } from 'ngx-webstorage';
+<%_ } _%>
 
 import { VERSION } from 'app/app.constants';
+<%_ if (enableTranslation) { _%>
 import { LANGUAGES } from 'app/config/language.constants';
+<%_ } _%>
 import { Account } from 'app/core/auth/account.model';
 import { AccountService } from 'app/core/auth/account.service';
 import { LoginService } from 'app/login/login.service';
 import { ProfileService } from 'app/layouts/profiles/profile.service';
-import { EntityNavbarItems } from 'app/entities/entity-navbar-items';
+
 
 @Component({
   selector: 'ngx-header',
@@ -32,20 +53,18 @@ export class HeaderComponent implements OnInit, OnDestroy {
   userPictureOnly: boolean = false;
   user: any;
 
-  // aggiunta
   inProduction?: boolean;
+<%_ if (enableTranslation) { _%>
   languages = LANGUAGES;
+<%_ } _%>
   openAPIEnabled?: boolean;
   version = '';
   account: Account | null = null;
-  entitiesNavbarItems: any[] = [];
 
   entitiesSelectControl=new FormControl('');
   adminSelectControl=new FormControl('');
   accountSelectControl=new FormControl('');
   languageSelectControl=new FormControl('');
-
-  //
 
   themes = [
     {
@@ -75,13 +94,18 @@ export class HeaderComponent implements OnInit, OnDestroy {
               private themeService: NbThemeService,
               private layoutService: LayoutService,
               private breakpointService: NbMediaBreakpointsService,
-              // aggiunta
               private loginService: LoginService,
-              private translateService: TranslateService,
-              private sessionStorageService: SessionStorageService,
-              private accountService: AccountService,
-              private profileService: ProfileService,
-              private router: Router
+            <%_ if (enableTranslation) { _%>
+                private translateService: TranslateService,
+                private sessionStorageService: SessionStorageService,
+              <%_ if (applicationTypeGateway) { _%>
+                private compiler: Compiler,
+                private injector: Injector,
+              <%_ } _%>
+            <%_ } _%>
+                private accountService: AccountService,
+                private profileService: ProfileService,
+                private router: Router
               ) {
               if (VERSION) {
                   this.version = VERSION.toLowerCase().startsWith('v') ? VERSION : `v${VERSION}`;
@@ -89,8 +113,6 @@ export class HeaderComponent implements OnInit, OnDestroy {
   }
 
   ngOnInit() {
-    // aggiunta
-    this.entitiesNavbarItems = EntityNavbarItems;
     this.profileService.getProfileInfo().subscribe(profileInfo => {
       this.inProduction = profileInfo.inProduction;
       this.openAPIEnabled = profileInfo.openAPIEnabled;
@@ -99,7 +121,6 @@ export class HeaderComponent implements OnInit, OnDestroy {
     this.accountService.getAuthenticationState().subscribe(account => {
       this.account = account;
     });
-   //
 
     this.currentTheme = this.themeService.currentTheme;
 
@@ -143,8 +164,6 @@ export class HeaderComponent implements OnInit, OnDestroy {
     return false;
   }
 
-  // aggiunta
-
   goToEntityPages(entityNamePath: string) {
    this.entitiesSelectControl.reset('');
    this.router.navigate([entityNamePath]);
@@ -164,6 +183,7 @@ export class HeaderComponent implements OnInit, OnDestroy {
     }
   }
 
+  <%_ if (enableTranslation) { _%>
   changeLanguage(languageKey: string): void {
     this.languageSelectControl.reset('');
     this.sessionStorageService.store('locale', languageKey);
@@ -174,6 +194,7 @@ export class HeaderComponent implements OnInit, OnDestroy {
     this.accountSelectControl.reset('');
 
   }
+  <%_ } _%>
 
 
   login(): void {
@@ -184,5 +205,5 @@ export class HeaderComponent implements OnInit, OnDestroy {
     this.loginService.logout();
     this.router.navigate(['']);
   }
-//
+
 }
