--- a/generators/client/templates/package.json.ejs
+++ b/generators/client/templates/package.json.ejs
@@ -137,6 +137,7 @@
     "@types/leaflet": "1.2.3",
     "@types/node": "<%= dependabotPackageJson.devDependencies['@types/node'] %>",
     "browser-sync": "<%= dependabotPackageJson.devDependencies['browser-sync'] %>",
+    "browser-sync-client": "2.27.9",
     "browser-sync-webpack-plugin": "<%= dependabotPackageJson.devDependencies['browser-sync-webpack-plugin'] %>",
     "codelyzer": "6.0.0",
     "conventional-changelog-cli": "1.3.4",
