aggiunta template di test integration da modificare

--- a/generators/client/templates/webapp/app/ngx-header/header.component.ts.ejs
+++ b/generators/client/templates/webapp/app/ngx-header/header.component.ts.ejs
@@ -169,8 +169,13 @@ export class HeaderComponent implements OnInit, OnDestroy {
    this.router.navigate([entityNamePath]);
   }
   goToAdminPages(adminPath: string) {
-    this.adminSelectControl.reset('');
+    if(adminPath==='h2-console' || adminPath.indexOf('http://')) {
+      window.open(adminPath);
+    }
+    else {
     this.router.navigate([adminPath]);
+    }
+    this.adminSelectControl.reset('');
   }
 
   performLoginOrLogout(loginOrLogout: string) {
